# rust-archiving

./: .gitignore  Cargo.toml  README.md  main
src/: main  main.rs  temp00  with-ignorelist.rs  withoud-ignore-list.rs
