[package]
name = "archiving"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
tokio = { version = "1", features = ["full"] }